add some projects

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
                     <a href="http://dl.acm.org/citation.cfm?id=2695987" target="_blank">http://dl.acm.org/citation.cfm?id=2695987</a>
                     <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
                     <span class="ntu">NTU</span>
                 </li>
                 <li data-name="himelight">
@@ -144,6 +145,8 @@
                     <span class="web">web</span>
                     <span class="startup">startup</span>
                     <span class="nodejs">Node.js</span>
+                    <span class="angular">Angular.js</span>
+                    <span class="react">React.js</span>
                 </li>
                 <li data-name="display-name">
                     <h4>displayName</h4>
@@ -156,10 +159,38 @@
                     <a href="https://tw.uwant.yahoo.com" target="_blank">https://tw.uwant.yahoo.com</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
+                    <span class="yahoo">Yahoo</span>
                 </li>
                 <li data-name="fbpjs">
                     <h4>FBP.js</h4>
                     <a href="https://github.com/teaualune/fbpjs" target="_blank">https://github.com/teaualune/fbpjs</a>
+                    <span class="web">web</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="tapit">
+                    <h4>TapIt Beer App</h4>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="react">React.js</span>
+                    <span class="ios">iOS</span>
+                    <span class="private">private</span>
+                </li>
+                <li data-name="tec">
+                    <h4>Taidah Entreprenuership Center</h4>
+                    <a href="http://tec.ntu.edu.tw" target="_blank">http://tec.ntu.edu.tw</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                </li>
+                <li data-name="cardo">
+                    <h4>CARDO Website</h4>
+                    <a href="http://cardo.ntu.edu.tw">http://cardo.ntu.edu.tw</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="react">React.js</span>
+                </li>
+                <li data-name="hsa-tutorial-day">
+                    <h4>HSA Tutorial Day Website</h4>
+                    <a href="https://github.com/teaualune/hsa-tutorial-day">https://github.com/teaualune/hsa-tutorial-day</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                 </li>
@@ -177,6 +208,8 @@
                     <h4>Ya!MyDay</h4>
                     <a href="https://github.com/teaualune/yamyday" target="_blank">https://github.com/teaualune/yamyday</a>
                     <span class="web">web</span>
+                    <span class="angular">Angular.js</span>
+                    <span class="nodejs">Node.js</span>
                     <span class="hackday">hackday</span>
                 </li>
                 <li data-name="jq-shootduck">
@@ -202,6 +235,7 @@
                     <h4>UniEco website</h4>
                     <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
                     <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="weblog-demo">
                     <h4>Weblog Demo</h4>
@@ -226,17 +260,20 @@
                 <li data-name="iphonedoll">
                     <h4>Yahoo! iPhone Doll</h4>
                     <span class="ios">iOS</span>
-                    <span class="y-internal">Y! internal</span>
+                    <span class="yahoo">Yahoo</span>
+                    <span class="private">private</span>
                 </li>
                 <li data-name="y-clothes-finder">
                     <h4>Yahoo! Clothes Finder</h4>
                     <span class="ios">iOS</span>
-                    <span class="y-internal">Y! internal</span>
+                    <span class="yahoo">Yahoo</span>
+                    <span class="private">private</span>
                 </li>
                 <li data-name="r-u-lucky-here">
                     <h4>Are You Lucky Here?</h4>
                     <span class="ios">iOS</span>
                     <span class="ntu">NTU</span>
+                    <span class="private">private</span>
                 </li>
             </ul>
         </section>
