can filter works

--- a/index.html
+++ b/index.html
@@ -131,6 +131,25 @@
             <header>
                 <h3>Works</h3>
             </header>
+            <span class="select">
+                <select id="sel-work" onchange="filterWork()">
+                    <option value="">All</option>
+                    <option value="web">web</option>
+                    <option value="nodejs">Node.js</option>
+                    <option value="ntu">NTU</option>
+                    <option value="startup">startup</option>
+                    <option value="angular">Angular.js</option>
+                    <option value="react">React.js</option>
+                    <option value="yahoo">Yahoo</option>
+                    <option value="ios">iOS</option>
+                    <option value="private">private</option>
+                    <option value="android">Android</option>
+                    <option value="hackday">hackday</option>
+                    <option value="game">game</option>
+                    <option value="java">Java</option>
+                    <option value="ror">RoR</option>
+                </select>
+            </span>
             <ul>
                 <li data-name="thesis">
                     <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
@@ -314,5 +333,6 @@
             </ul>
         </section>
     </div>
+    <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
