--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <header>
                 <p>Welcome passing by, this is the personal site of Tai-Lun Tseng (Lawrence).</p>
             </header>
-            <p>My major work are focused on F2E and iOS development, and I am studying hard to learn architecting for IaaS &amp; PaaS in PASLab, NTU. I am also one of the cofounders of Himelight.</p>
+            <p>I am one of the cofounders as well as CTO of Himelight. My expertise includes front-end development, back-end development, iOS and Android development, etc.</p>
             <p>But in fact I am always looking forward to game development.</p>
             <p>Also, I'm crazy in building plastic models categorized in military, Gunpla, etc.</p>
         </section>
@@ -32,7 +32,7 @@
             </header>
             <ul>
                 <li data-name="ntu-csie">
-                    <h4>NTU, CSIE, Master Degree</h4>
+                    <h4>National Taiwan University (NTU), CSIE, Master Degree</h4>
                     <p>2012 - 2014</p>
                 </li>
                 <li data-name="ntu-cloud">
@@ -148,11 +148,14 @@
                     <option value="game">game</option>
                     <option value="java">Java</option>
                     <option value="ror">RoR</option>
+                    <option value="php">PHP</option>
+                    <option value="cuda">CUDA</option>
                 </select>
             </span>
             <ul>
                 <li data-name="thesis">
                     <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
+                    <p>2013.08 - 2014.09</p>
                     <a href="http://dl.acm.org/citation.cfm?id=2695987" target="_blank">http://dl.acm.org/citation.cfm?id=2695987</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
@@ -160,6 +163,7 @@
                 </li>
                 <li data-name="himelight">
                     <h4>Himelight</h4>
+                    <p>2014.09 - Present</p>
                     <a href="https://www.himelight.com" target="_blank">https://www.himelight.com</a>
                     <span class="web">web</span>
                     <span class="startup">startup</span>
@@ -175,6 +179,7 @@
                 </li>
                 <li data-name="uww">
                     <h4>Yahoo! U Want Wall</h4>
+                    <p>2012.11 - 2013.04</p>
                     <a href="https://tw.uwant.yahoo.com" target="_blank">https://tw.uwant.yahoo.com</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
@@ -188,6 +193,7 @@
                 </li>
                 <li data-name="tapit">
                     <h4>TapIt Beer App</h4>
+                    <p>2015.12 - 2016.01</p>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                     <span class="react">React.js</span>
@@ -196,35 +202,84 @@
                 </li>
                 <li data-name="tec">
                     <h4>Taidah Entreprenuership Center</h4>
+                    <p>2015.08</p>
                     <a href="http://tec.ntu.edu.tw" target="_blank">http://tec.ntu.edu.tw</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="cardo">
                     <h4>CARDO Website</h4>
-                    <a href="http://cardo.ntu.edu.tw">http://cardo.ntu.edu.tw</a>
+                    <p>2015.08 - 2016.01</p>
+                    <a href="http://cardo.ntu.edu.tw" target="_blank">http://cardo.ntu.edu.tw</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                     <span class="react">React.js</span>
                 </li>
+                <li data-name="rakuten-react">
+                    <h4>Rakuten Taiwan &ndash; React Component Based CMS</h4>
+                    <p>2015.05</p>
+                    <a href="http://www.rakuten.com.tw" target="_blank">http://www.rakuten.com.tw</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="react">React.js</span>
+                    <span class="private">private</span>
+                </li>
+                <li data-name="asian-barometer">
+                    <h4>Asian Barometer Website</h4>
+                    <p>2015.07 - 2015.12</p>
+                    <a href="http://asianbarometer.org" target="_blank">http://asianbarometer.org</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="global-barometer">
+                    <h4>Global Barometer Website</h4>
+                    <p>2015.01 - 2015.06</p>
+                    <a href="http://globalbarometer.org" target="_blank">http://globalbarometer.org</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="pdp-site">
+                    <h4>Parallel and Distributed Programming Course Site</h4>
+                    <p>2014.02 - 2014.03</p>
+                    <a href="https://github.com/teaualune/pdp-site" target="_blank">https://github.com/teaualune/pdp-site</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="angular">Angular.js</span>
+                    <span class="ntu">NTU</span>
+                </li>
                 <li data-name="hsa-tutorial-day">
                     <h4>HSA Tutorial Day Website</h4>
-                    <a href="https://github.com/teaualune/hsa-tutorial-day">https://github.com/teaualune/hsa-tutorial-day</a>
+                    <p>2015.02</p>
+                    <a href="https://github.com/teaualune/hsa-tutorial-day" target="_blank">https://github.com/teaualune/hsa-tutorial-day</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                 </li>
+                <li data-name="tmu-international-scholarships">
+                    <h4>Scholarship Management System for Taipei Medical University (TMU) International Office</h4>
+                    <p>2014.04 - 2014.06</p>
+                    <span class="web">web</span>
+                    <span class="php">PHP</span>
+                    <span class="private">private</span>
+                </li>
                 <li data-name="compareprice">
                     <h4>比價撿便宜</h4>
+                    <p>2014.03 - 2014.05</p>
                     <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
                     <span class="android">Android</span>
+                    <span class="java">Java</span>
                 </li>
                 <li data-name="ifindbook">
                     <h4>i找書</h4>
+                    <p>2015.06 - 2015.10</p>
                     <a href="https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook" target="_blank">https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook</a>
                     <span class="android">Android</span>
+                    <span class="java">Java</span>
                 </li>
                 <li data-name="yamyday">
                     <h4>Ya!MyDay</h4>
+                    <p>2013.11</p>
                     <a href="https://github.com/teaualune/yamyday" target="_blank">https://github.com/teaualune/yamyday</a>
                     <span class="web">web</span>
                     <span class="angular">Angular.js</span>
@@ -233,31 +288,36 @@
                 </li>
                 <li data-name="jq-shootduck">
                     <h4>Shoot Duck - jQuery Sample</h4>
+                    <p>2013.03</p>
                     <a href="https://github.com/teaualune/shootduck" target="_blank">https://github.com/teaualune/shootduck</a>
                     <span class="web">web</span>
                     <span class="game">game</span>
                 </li>
                 <li data-name="sk-shootduck">
                     <h4>Shoot Duck - Sprite Kit Sample</h4>
+                    <p>2013.07</p>
                     <a href="https://github.com/teaualune/sk-shootduck" target="_blank">https://github.com/teaualune/sk-shootduck</a>
                     <span class="ios">iOS</span>
                     <span class="game">game</span>
                 </li>
                 <li data-name="mapreduce-websocket">
                     <h4>MapReduce with WebSocket</h4>
+                    <p>2013.06</p>
                     <a href="https://github.com/teaualune/1012NTUSTCC-PRJ" target="_blank">https://github.com/teaualune/1012NTUSTCC-PRJ</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                     <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="unieco">
-                    <h4>UniEco website</h4>
+                    <h4>UniEco Website</h4>
+                    <p>2014.11</p>
                     <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="weblog-demo">
                     <h4>Weblog Demo</h4>
+                    <p>2011.06</p>
                     <a href="http://teaualunemsglogdemo.appspot.com" target="_blank">http://teaualunemsglogdemo.appspot.com</a>
                     <span class="web">web</span>
                     <span class="java">Java</span>
@@ -265,6 +325,7 @@
                 </li>
                 <li data-name="compurchasy">
                     <h4>Compurchasy</h4>
+                    <p>2012.06</p>
                     <a href="http://compurchasy.herokuapp.com" target="_blank">http://compurchasy.herokuapp.com</a>
                     <span class="web">web</span>
                     <span class="ror">RoR</span>
@@ -272,26 +333,38 @@
                 </li>
                 <li data-name="hihidaruma">
                     <h4>Hihidaruma</h4>
+                    <p>2012.11</p>
                     <a href="http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html" target="_blank">http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html</a>
                     <span class="web">web</span>
+                    <span class="php">PHP</span>
                     <span class="hackday">hackday</span>
                 </li>
                 <li data-name="iphonedoll">
                     <h4>Yahoo! iPhone Doll</h4>
+                    <p>2012.07 - 2012.08</p>
                     <span class="ios">iOS</span>
                     <span class="yahoo">Yahoo</span>
                     <span class="private">private</span>
                 </li>
                 <li data-name="y-clothes-finder">
                     <h4>Yahoo! Clothes Finder</h4>
+                    <p>2013.06</p>
                     <span class="ios">iOS</span>
                     <span class="yahoo">Yahoo</span>
                     <span class="private">private</span>
                 </li>
                 <li data-name="r-u-lucky-here">
                     <h4>Are You Lucky Here?</h4>
+                    <p>2012.12</p>
+                    <a href="https://bitbucket.org/teaualune/checkinfortune" target="_blank">https://bitbucket.org/teaualune/checkinfortune</a>
                     <span class="ios">iOS</span>
                     <span class="ntu">NTU</span>
+                </li>
+                <li data-name="ct-cuda">
+                    <h4>CUDA Accelerated CT Scanning Image Reconstruction</h4>
+                    <p>2011.02 - 2011.06</p>
+                    <span class="ntu">NTU</span>
+                    <span class="cuda">CUDA</span>
                     <span class="private">private</span>
                 </li>
             </ul>
@@ -317,7 +390,7 @@
                 <li data-name="latex-tutorial">
                     <h4>LaTeX Tutorial</h4>
                     <p>2015.01</p>
-                    <a href="https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274">https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274</a>
+                    <a href="https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274" target="_blank">https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274</a>
                 </li>
             </ul>
         </section>
