--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                     Java EE (Servlet &amp; JSP)
                     <span>★★★</span>
                 </li>
-                <li data-name="cuda">
-                    CUDA
-                    <span>★★☆</span>
+                <li data-name="objc">
+                    Objective-C
+                    <span>★★★★</span>
                 </li>
                 <li data-name="ios">
                     iOS Development
@@ -109,22 +109,50 @@
                     Node.js
                     <span>★★★★☆</span>
                 </li>
-                <li data-name="hadoop">
+                <li data-name="android">
+                    Android Development
+                    <span>★★★☆</span>
+                </li>
+                <li data-name="ai">
+                    Adobe Illustrator
+                    <span>★★★</span>
+                </li>
+                <li data-name="cuda">
+                    CUDA
+                    <span>★★☆</span>
+                </li>
+                <!-- <li data-name="hadoop">
                     Hadoop
                     <span>★☆</span>
-                </li>
+                </li> -->
                 <li data-name="ooad">
                     UML &amp; OOAD
                     <span>★★★</span>
-                </li>
-                <li data-name="android">
-                    Android
-                    <span>★★★☆</span>
                 </li>
                 <li data-name="latex">
                     LaTeX
                     <span>★★★</span>
                 </li>
+                <li data-name="swift">
+                    Swift
+                    <span>★★</span>
+                </li>
+                <li data-name="python">
+                    Python
+                    <span>★☆</span>
+                </li>
+                <li data-name="php">
+                    PHP
+                    <span>★☆</span>
+                </li>
+                <li data-name="ror">
+                    Ruby on Rails (RoR)
+                    <span>★</span>
+                </li>
+                <!-- <li data-name="golang">
+                    Golang
+                    <span>★</span>
+                </li> -->
             </ul>
         </section>
         <section id="works">
@@ -143,6 +171,7 @@
                     <option value="yahoo">Yahoo</option>
                     <option value="ios">iOS</option>
                     <option value="private">private</option>
+                    <option value="case">case</option>
                     <option value="android">Android</option>
                     <option value="hackday">hackday</option>
                     <option value="game">game</option>
@@ -150,6 +179,7 @@
                     <option value="ror">RoR</option>
                     <option value="php">PHP</option>
                     <option value="cuda">CUDA</option>
+                    <option value="matlab">MATLAB</option>
                 </select>
             </span>
             <ul>
@@ -199,6 +229,7 @@
                     <span class="react">React.js</span>
                     <span class="ios">iOS</span>
                     <span class="private">private</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="tec">
                     <h4>Taidah Entreprenuership Center</h4>
@@ -206,6 +237,7 @@
                     <a href="http://tec.ntu.edu.tw" target="_blank">http://tec.ntu.edu.tw</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="cardo">
                     <h4>CARDO Website</h4>
@@ -214,6 +246,7 @@
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                     <span class="react">React.js</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="rakuten-react">
                     <h4>Rakuten Taiwan &ndash; React Component Based CMS</h4>
@@ -223,6 +256,7 @@
                     <span class="nodejs">Node.js</span>
                     <span class="react">React.js</span>
                     <span class="private">private</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="asian-barometer">
                     <h4>Asian Barometer Website</h4>
@@ -231,6 +265,7 @@
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                     <span class="ntu">NTU</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="global-barometer">
                     <h4>Global Barometer Website</h4>
@@ -239,6 +274,7 @@
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                     <span class="ntu">NTU</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="pdp-site">
                     <h4>Parallel and Distributed Programming Course Site</h4>
@@ -255,6 +291,7 @@
                     <a href="https://github.com/teaualune/hsa-tutorial-day" target="_blank">https://github.com/teaualune/hsa-tutorial-day</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="tmu-international-scholarships">
                     <h4>Scholarship Management System for Taipei Medical University (TMU) International Office</h4>
@@ -262,6 +299,7 @@
                     <span class="web">web</span>
                     <span class="php">PHP</span>
                     <span class="private">private</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="compareprice">
                     <h4>比價撿便宜</h4>
@@ -269,6 +307,7 @@
                     <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
                     <span class="android">Android</span>
                     <span class="java">Java</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="ifindbook">
                     <h4>i找書</h4>
@@ -276,6 +315,7 @@
                     <a href="https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook" target="_blank">https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook</a>
                     <span class="android">Android</span>
                     <span class="java">Java</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="yamyday">
                     <h4>Ya!MyDay</h4>
@@ -314,6 +354,7 @@
                     <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
+                    <span class="case">case</span>
                 </li>
                 <li data-name="weblog-demo">
                     <h4>Weblog Demo</h4>
@@ -366,6 +407,14 @@
                     <span class="ntu">NTU</span>
                     <span class="cuda">CUDA</span>
                     <span class="private">private</span>
+                </li>
+                <li data-name="physics-matlab">
+                    <h4>Physics Demo for Physic Courses</h4>
+                    <p>2009.06</p>
+                    <span class="ntu">NTU</span>
+                    <span class="matlab">MATLAB</span>
+                    <span class="private">private</span>
+                    <span class="case">case</span>
                 </li>
             </ul>
         </section>
