--- a/index.html
+++ b/index.html
@@ -356,6 +356,13 @@
                     <span class="nodejs">Node.js</span>
                     <span class="case">case</span>
                 </li>
+                <li data-name="cardcial">
+                    <h4>Cardcial (former Himelight)</h4>
+                    <p>2013.06 - 2013.09</p>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="startup">startup</span>
+                </li>
                 <li data-name="weblog-demo">
                     <h4>Weblog Demo</h4>
                     <p>2011.06</p>
